<resources>
    <string name="app_name">Festivals Ireland</string>
    <string name="button_addFestival">Add Festival</string>
    <string name="hint_festivalTitle">Name</string>
    <string name="hint_festivalDate">Date</string>
    <string name="hint_festivalDescription">Type</string>
    <string name="button_addDescription">Add Description</string>
    <string name="hint_festivalLocation">Location</string>
    <string name="hint_festivalLatitude">Latitude</string>
    <string name="hint_festivalLongitude">Longitude</string>
    <string name="menu_addFestival">Music Festivals</string>
    <string name="menu_cancelButton">Cancel</string>
    <string name="menu_deleteButton">Delete</string>
    <string name="menu_homeButton">Home</string>
    <string name="menu_profileFestival">Profile</string>
    <string name="enter_festival_title">You must enter a festival name</string>
    <string name="enter_festival_date">You must set a date</string>
    <string name="enter_festival_value">Please Enter a value</string>
    <string name="enter_festival_location">Please Enter Location</string>
    <string name="save_festival">Save a Festival</string>
    <string name="pick_location">County</string>
    <string name="button_addImage">Add an Image</string>
    <string name="change_festival_image">Change Image</string>
    <string name="select_festival_image">Select festival image</string>
    <string name="select_festival_image2">Select another festival image</string>
    <string name="button_location">Set Location</string>
    <string name="button_picker">Set Date</string>
    <string name="title_activity_festival_maps">Map of All Festivals </string>
    <string name="festival_image_placeholder">Festival Image</string>
    <string name="festival_title_placeholder">Festival Title</string>
    <string name="festival_description_placeholder">Festival Description</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="splash_text">Festival App</string>
    <string name="google_maps_key">Google Maps</string>




    <string-array name="counties_list">
        <item>Antrim</item>
        <item>Armagh</item>
        <item>Carlow</item>
        <item>Cavan</item>
        <item>Clare</item>
        <item>Cork</item>
        <item>Derry</item>
        <item>Donegal</item>
        <item>Down</item>
        <item>Dublin</item>
        <item>Fermanagh</item>
        <item>Galway</item>
        <item>Kerry</item>
        <item>Kildare</item>
        <item>Kilkenny</item>
        <item>Laois</item>
        <item>Leitrim</item>
        <item>Limerick</item>
        <item>Longford</item>
        <item>Louth</item>
        <item>Mayo</item>
        <item>Meath</item>
        <item>Monaghan</item>
        <item>Offaly</item>
        <item>Roscommon</item>
        <item>Sligo</item>
        <item>Tipperary</item>
        <item>Tyrone</item>
        <item>Waterford</item>
        <item>Westmeath</item>
        <item>Wexford</item>
        <item>Wicklow</item>
    </string-array>

    <string-array name="type_list">
        <item>Arts</item>
        <item>Comedy</item>
        <item>Film</item>
        <item>Food</item>
        <item>Music</item>
        <item>Spoken Word</item>
        <item>Literary</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>