<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FestivalActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:layout_marginTop="61dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/festivalImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher" />

                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:backgroundTint="@color/purple_500"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addImage"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/festivalTitle"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:background="@color/torq"
                    android:hint="@string/hint_festivalTitle"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textColor="@color/black"
                    android:textSize="24sp" />


                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:background="@color/torq"
                    android:hint="@string/hint_festivalDescription"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/county"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:background="@color/torq"
                    android:hint="@string/hint_festivalLocation"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/festivalLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:backgroundTint="@color/purple_500"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_location"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:backgroundTint="@color/purple_500"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addFestival"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
                <Spinner
                    android:id="@+id/spinner_counties"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="338dp"
                    android:spinnerMode="dropdown"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>